fixed fill overspill and border not rendering

--- a/UKPostCodeValidation/css.css
+++ b/UKPostCodeValidation/css.css
@@ -7,7 +7,7 @@
     outline: none !important;
     line-height: 2.5rem;
     height: 2.5rem;
-    border: 1px solid transparent;
+    border: 1px solid grey;
     padding: 0 0.5rem;
     font-size: 1rem;
     font-weight: 600;
@@ -29,7 +29,7 @@
 
     .PostCodeValidator div.Error{
         background-color: rgba(191, 9, 0, 0.075);
-        padding: 0.5rem;
+        /*padding: 0.5rem;*/
         display: inline-flex;
         word-break: normal;
         white-space: normal;
